--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,10 @@
+/* @import '~@fullcalendar/core/main.css';
+@import '~@fullcalendar/daygrid/main.css'; */
+
 .App {
   text-align: center;
 }
+
 .completed {
   text-decoration: line-through;
 }
