Front-end structure

--- a/frontend/src/styles/protons/colors.scss
+++ b/frontend/src/styles/protons/colors.scss
@@ -8,8 +8,8 @@
   --colorWhite: #FAFAFA;
 
   // Main color
-  --colorPurple: #625CFF;
-  --colorPurpleLight: #8782FE;
+  --colorPurple: #7773ff;
+  --colorPurpleLight: #aeacff;
   --colorPurpleVeryLight: #F6F6FF;
   
   // Secondary color
