--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,8 +1,12 @@
 @import '~@fullcalendar/core/main.css';
 @import '~@fullcalendar/daygrid/main.css';
 
-.App {
-  text-align: center;
+#root {
+  min-height: 100vh;
+  background-color: var(--colorPurpleVeryLight);
+  height:100%;
+  width:100%;
+  
 }
 
 .completed {
@@ -18,9 +22,11 @@
   background-color: var(--colorPurple) !important;
 }
 
-#root {
-  background-color: var(--colorPurpleVeryLight);
-}
 .main {
-  margin: var(--marginsLayout);
+  margin: 0px var(--marginsLayout);
+  font-family: NunitoSans;
+}
+
+h1,h2,h3,h4{
+  font-family: Nunito;
 }
