Landing page started

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,12 +1,13 @@
 @import '~@fullcalendar/core/main.css';
 @import '~@fullcalendar/daygrid/main.css';
+@import './styles/protons/medias.scss';
 
 #root {
   min-height: 100vh;
   background-color: var(--colorPurpleVeryLight);
   height:100%;
   width:100%;
-  
+  font-family: NunitoSans;
 }
 
 .completed {
@@ -24,9 +25,34 @@
 
 .main {
   margin: 0px var(--marginsLayout);
-  font-family: NunitoSans;
+  
+  min-height:100vh;
 }
 
-h1,h2,h3,h4{
-  font-family: Nunito;
+h1,h2,h3,h4,h5,h6{
+  font-family: NunitoSans;
+  font-weight: bold;
 }
+
+p{
+  font-size: var(--fontSizeMain)
+}
+
+  h1{ font-size: 72px !important};
+  h2{ font-size: 36px !important};
+  h3{ font-size: 28px !important};
+  h4{ font-size: 24px !important};
+  h5{ font-size: 21px !important};
+  h6{ font-size: 18px !important};
+
+
+  //MOBILE FONT SIZE
+  @include small {
+    h1{ font-size: 48px !important};
+    h2{ font-size: 30px !important};
+    h3{ font-size: 28px !important};
+    h4{ font-size: 24px !important};
+    h5{ font-size: 21px !important};
+    h6{ font-size: 18px !important};
+
+  }
