--- a/frontend/src/components/1-atoms/button/button.scss
+++ b/frontend/src/components/1-atoms/button/button.scss
@@ -1,9 +1,14 @@
 .a-button {
     display: inline-block;
     border-radius: var(--borderRadiusMedium);
-    padding: var(--spaceS) var(--spaceM);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     width: 100%;
+    min-width: max-content;
+    padding:0 var(--spaceS);
+    height:40px;
     box-shadow: var(--boxShadow);
     font-weight: bold;
 }
