--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -8,6 +8,7 @@
   height:100%;
   width:100%;
   font-family: NunitoSans;
+  color: var(--colorBlack);
 }
 
 .completed {
@@ -35,7 +36,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 p{
-  font-size: var(--fontSizeMain)
+  font-size: var(--fontSizeMain);
 }
 
   h1{ font-size: 72px !important};
