--- a/frontend/src/components/2-molecules/caption/caption.scss
+++ b/frontend/src/components/2-molecules/caption/caption.scss
@@ -6,5 +6,6 @@
     &>:first-child{
         color: var(--colorPurple);
         margin-bottom: var(--spaceS);
+        font-weight: bolder;
     }
 }
