--- a/frontend/src/components/3-organisms/header/header.scss
+++ b/frontend/src/components/3-organisms/header/header.scss
@@ -5,6 +5,9 @@
     grid-gap: var(--gutterWidth);
     align-items: center;
     padding: var(--spaceXS) 0;
+    background-color: var(--colorPurpleVeryLight);
+    position: sticky;
+    top:0;
     &>:first-child{
         grid-column: 1 / 8;
     }
