--- a/frontend/src/components/4-layouts/landing/landing.scss
+++ b/frontend/src/components/4-layouts/landing/landing.scss
@@ -2,15 +2,15 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+    margin-top: auto;
     overflow: hidden;
+    min-height:calc(100vh - 70px);
     &>:first-child{
-        grid-column: 1 / 13;
-
+        margin: auto;
     }
     &>:nth-child(2){
-        grid-column: 1 / 13;
+        margin-top: auto;
     }
+
     
 }
