--- a/frontend/src/styles/protons/misc.scss
+++ b/frontend/src/styles/protons/misc.scss
@@ -9,7 +9,7 @@
   // main box shadow
   --boxShadow: 1px 3px 6px rgba(0, 0, 0, 0.4);
   // Box shadow primary color
-  --boxShadowPurple: 1px 3px 6px #615cff87;
+  --boxShadowPurple: 1px 3px 8px #b5b4ff;
   // Box shadow secondary color
   --boxShadowYellow: 1px 3px 6px #ffbe0d7d;
   
