--- a/frontend/src/components/4-layouts/landing/landing.scss
+++ b/frontend/src/components/4-layouts/landing/landing.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     min-height:calc(100vh - 70px);
     &>:first-child{
-        margin: auto;
+        margin: auto 0;
     }
     &>:nth-child(2){
         margin-top: auto;
