--- a/frontend/src/styles/protons/misc.scss
+++ b/frontend/src/styles/protons/misc.scss
@@ -9,9 +9,9 @@
   // main box shadow
   --boxShadow: 1px 3px 6px rgba(0, 0, 0, 0.4);
   // Box shadow primary color
-  --boxShadowPurple: 1px 3px 8px #b5b4ff;
+  --boxShadowPurple: 1px 2px 6px #cdccff;
   // Box shadow secondary color
-  --boxShadowYellow: 1px 3px 6px #ffbe0d7d;
+  --boxShadowYellow: 1px 2px 6px #ffbe0d7d;
   
   --marginsLayout: 30px;
   --gutterWidth: 16px;
