Front end progress - Register step 3

--- a/frontend/src/components/4-layouts/login/login.scss
+++ b/frontend/src/components/4-layouts/login/login.scss
@@ -13,6 +13,8 @@
         color: var(--colorPurple);
     }
     & > * {
+        
+        
         grid-column: 5 / 9;
         @include small {
             grid-column: 1 / 5;
@@ -25,8 +27,8 @@
         }
 
     }
-
-    & .a-button{
-        margin: var(--spaceL) 0;
+    form > * {
+        margin : var(--spaceL) 0;
     }
+   
 }
