--- a/frontend/src/components/2-molecules/checkbox/checkbox.scss
+++ b/frontend/src/components/2-molecules/checkbox/checkbox.scss
@@ -1,6 +1,13 @@
 .checkbox {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    label {
+        overflow-wrap: break-word;
+    }
     input {
-        margin-right: .4rem;
+        margin: .3rem;
         color: var(--colorPurple);
+        
     }
 }
