Tags input customized

--- a/frontend/src/components/2-molecules/input/input.scss
+++ b/frontend/src/components/2-molecules/input/input.scss
@@ -19,6 +19,7 @@
         height: 40px;
         width: 100%;
         padding-left: var(--spaceM);
+        padding-right: var(--spaceM);
         font-size: var(--fontSizeMain);
        
     }
